Change SchemaNodeIdentifier constructors
Rather than taking any Collection, take an explicit List. While we are
at it, ditch the use of ImmutableList and use Java's unmodifiable lists
instead.

Change-Id: I75f397db495f2de7fc986f104ae5776fa508013c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>